# neural-ode

./: .gitignore  README.md  pixi.toml  pyproject.toml
data/: __init__.py  datamodule.py  dataset.py
models/: autoencoder.py  latent_ode_lightning.py  neural_ode.py  resnet.py
neural_ode/data/: __init__.py  datamodule.py  dataset.py
neural_ode/models/: __init__.py  autoencoder.py  latent_ode_lightning.py  neural_ode.py  resnet.py
neural_ode/sim/: hyperelasticity.py
neural_ode/tools/: cli.py
sim/: hyperelasticity.py
tools/: cli.py
